- Fix raw access to wxBitmap pixels after drawing on it using wxMemoryDC.
- Fix setting font and colours of wxToggleButtons with images.
- Fix wxPopupTransientWindow mouse events with GTK3,
  also fixes wxOwnerDrawnComboBox, wxDatePickerCtrl.
- Fix cursor inheritance.
- Fix wxStaticBoxSizer size calculation.
- Fix AUI panel re-docking.
- Add support for wxDD_DIR_MUST_EXIST to wxDirDialog.
- Fix disappearing mouse clicks when using wxTreeCtrl.
- Fix calls to Move{Before,After}InTabOrder() after parent window creation.

wxMSW:

- Disable the use of compiler TLS to avoid mysterious crashes in plugins.
- Added solution files for MSVS 2012 and 2013 (Artur Wieczorek).
- Fix handling of unsupported formats in dnd (jwiesemann).
- Fix blank wxBitmapComboBox dropdown appearance.
- Fix clicking on checkboxes in wxDataViewCtrl.
- Fix handling of Esc while an auto-complete drop down is open (Chaobin Zhang).
- Many improvements to alpha transparency handling (Artur Wieczorek).
- Make "%lu" work with size_t arguments under Win64 (laro).
- Fix wxRegion::Offset() with shared objects (Joost Nieuwenhuijse).
- Fix wxSocket::Initialize() after Shutdown() (Laurent Poujoulat).
- Fix coordinates of EVT_MOUSEWHEEL in frames with toolbars (LtJax).
- Support "show" verb as well as "open" in wxFileType (Eric Jensen).
- Fix display of bitmaps with alpha in wxStaticBitmap (Artur Wieczorek).
- Fix wxClientDC::Clear() for scrolled windows (Artur Wieczorek).
- Make wxPrinterDC::DrawIcon() actually work (Artur Wieczorek).
- Fix handling of wxSET, wxCLEAR and wxINVERT in wxDC (Artur Wieczorek).
- Fix bug with multiple default buttons in a dialog (Artur Wieczorek).
- Improve tooltips wrapping after updating their text (Artur Wieczorek).
- Fix checking menu items before appending them to the menu.
- Fix crash when adding/removing the same path to/from wxFileSystemWatcher.
- Draw "classic" disabled owner drawn buttons better (Artur Wieczorek).
- Fix width of the vertical toolbars (Artur Wieczorek).