@@ -612,6 +612,7 @@ wxGTK:
 - Fix wxStaticBoxSizer size calculation.
 - Fix AUI panel re-docking.
 - Add support for wxDD_DIR_MUST_EXIST to wxDirDialog.
+- Fix handling of the accelerators for sub menu items (Chaobin Zhang).
 - Fix disappearing mouse clicks when using wxTreeCtrl.
 - Fix calls to Move{Before,After}InTabOrder() after parent window creation.
 
